--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "motion": "^12.0.6",
-    "next": "15.1.3",
+    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "eslint": "^9",
+    "eslint": "^9.19.0",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
